// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Component / NavBar Primary 1`] = `
<nav
  className="sc-hKgJUU inPWjR"
>
  <div
    className="sc-eCstlR engMEI"
  >
    <h1
      className="sc-jSgvzq buUiIr"
      onClick={[Function]}
    >
      DigiFinance
    </h1>
  </div>
  <ul
    className="sc-gKseQn cZucDc"
  >
    <li
      className="sc-bdfBQB fkFAUy"
      onClick={[Function]}
      style={
        Object {
          "backgroundColor": undefined,
          "color": undefined,
        }
      }
    >
      <div
        className="sc-gsTEea"
        style={
          Object {
            "fontSize": "undefinedpx",
          }
        }
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 16 16"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.136.326A1.5 1.5 0 0 1 14 1.78V3h.5A1.5 1.5 0 0 1 16 4.5v9a1.5 1.5 0 0 1-1.5 1.5h-13A1.5 1.5 0 0 1 0 13.5v-9a1.5 1.5 0 0 1 1.432-1.499L12.136.326zM5.562 3H13V1.78a.5.5 0 0 0-.621-.484L5.562 3zM1.5 4a.5.5 0 0 0-.5.5v9a.5.5 0 0 0 .5.5h13a.5.5 0 0 0 .5-.5v-9a.5.5 0 0 0-.5-.5h-13z"
          />
        </svg>
      </div>
      <div
        className="sc-dlfnuX jmDfiT"
      >
        TAMS
      </div>
    </li>
    <li
      className="sc-bdfBQB fkFAUy"
      onClick={[Function]}
      style={
        Object {
          "backgroundColor": undefined,
          "color": undefined,
        }
      }
    >
      <div
        className="sc-gsTEea"
        style={
          Object {
            "fontSize": "undefinedpx",
          }
        }
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 16 16"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.136.326A1.5 1.5 0 0 1 14 1.78V3h.5A1.5 1.5 0 0 1 16 4.5v9a1.5 1.5 0 0 1-1.5 1.5h-13A1.5 1.5 0 0 1 0 13.5v-9a1.5 1.5 0 0 1 1.432-1.499L12.136.326zM5.562 3H13V1.78a.5.5 0 0 0-.621-.484L5.562 3zM1.5 4a.5.5 0 0 0-.5.5v9a.5.5 0 0 0 .5.5h13a.5.5 0 0 0 .5-.5v-9a.5.5 0 0 0-.5-.5h-13z"
          />
        </svg>
      </div>
      <div
        className="sc-dlfnuX jmDfiT"
      >
        Jupiter
      </div>
    </li>
  </ul>
</nav>
`;

exports[`Storyshots Component / NavList Focused 1`] = `
<li
  className="sc-bdfBQB fkFAUy"
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": "#fff",
      "color": "#000",
    }
  }
>
  <div
    className="sc-gsTEea"
    style={
      Object {
        "fontSize": "16px",
      }
    }
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 16 16"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12.136.326A1.5 1.5 0 0 1 14 1.78V3h.5A1.5 1.5 0 0 1 16 4.5v9a1.5 1.5 0 0 1-1.5 1.5h-13A1.5 1.5 0 0 1 0 13.5v-9a1.5 1.5 0 0 1 1.432-1.499L12.136.326zM5.562 3H13V1.78a.5.5 0 0 0-.621-.484L5.562 3zM1.5 4a.5.5 0 0 0-.5.5v9a.5.5 0 0 0 .5.5h13a.5.5 0 0 0 .5-.5v-9a.5.5 0 0 0-.5-.5h-13z"
      />
    </svg>
  </div>
  <div
    className="sc-dlfnuX jmDfiT"
  >
    TAMS
  </div>
</li>
`;

exports[`Storyshots Component / NavList Primary 1`] = `
<li
  className="sc-bdfBQB fkFAUy"
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": undefined,
      "color": undefined,
    }
  }
>
  <div
    className="sc-gsTEea"
    style={
      Object {
        "fontSize": "16px",
      }
    }
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 16 16"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12.136.326A1.5 1.5 0 0 1 14 1.78V3h.5A1.5 1.5 0 0 1 16 4.5v9a1.5 1.5 0 0 1-1.5 1.5h-13A1.5 1.5 0 0 1 0 13.5v-9a1.5 1.5 0 0 1 1.432-1.499L12.136.326zM5.562 3H13V1.78a.5.5 0 0 0-.621-.484L5.562 3zM1.5 4a.5.5 0 0 0-.5.5v9a.5.5 0 0 0 .5.5h13a.5.5 0 0 0 .5-.5v-9a.5.5 0 0 0-.5-.5h-13z"
      />
    </svg>
  </div>
  <div
    className="sc-dlfnuX jmDfiT"
  >
    TAMS
  </div>
</li>
`;
